Fixed layout issue and background image not resizing on load. -Nelson

--- a/trunk/style.css
+++ b/trunk/style.css
@@ -1,10 +1,9 @@
 /*
-Theme Name: a2f-Riverside
-Theme URI: http://acts2fellowship.org/riverside
-Description: Theme for acts2fellowship Riverside (as well as the a2f groups in SD and Minnesota)
-Version: 2.0.1
-Author: Abe Yang
-Author URI: http://abeyang.berkmedia.org/
+Theme Name: a2f-berkeley-2011
+Theme URI: http://acts2fellowship.org/berkeley
+Description: Theme for acts2fellowship Berkeley
+Version: 1.0
+Author: A2F Berkeley Web Team
 Tags: fixed-width, one-column, two-columns, three-columns, left-sidebar, right-sidebar
 */
 
@@ -219,7 +218,7 @@ hr {
 /* PHOTO SIDEBAR */
 #photo-sidebar { overflow: hidden; }
 
-#photo-sidebar h2.header_section { margin-top: 30px; height: 290px; }
+#photo-sidebar h2.header_section { margin-top: 30px; height: 260px; }
 
 #photo-sidebar h2.header_section, #photo-sidebar h2.header_section a {
     font-size: 18px;
@@ -931,8 +930,8 @@ blockquote cite {
     width: 100%;
     height: 100%;
     background-color: #2C2F62;
-    opacity: 0.6;
-    filter: alpha(opacity=60);
+    opacity: 0.7;
+    filter: alpha(opacity=70);
     z-index: -1;
 }
 
